# code-graph-enricher

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  PACKAGE-INFO.md  README.md  pyproject.toml  quickstart.sh  requirements.txt  setup.py
docs/: ARCHITECTURE.md
examples/: README.md
examples/test-code-data/: main.py  models.py  utils.py
examples/test-code-data/.ai-gov/: code-graph.json
src/enricher/: __init__.py  cli.py  enrichment_schemas.py  iterative_enricher.py  layer1_structural.py  layer2_semantic.py  layer3_domain.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_iterative_enricher.py  test_layer1_structural.py  test_layer2_semantic.py  test_layer3_domain.py
